--- a/.github/workflows/tweet.yml
+++ b/.github/workflows/tweet.yml
@@ -8,19 +8,21 @@ on:
 jobs:
   tweet:
     runs-on: ubuntu-latest
+    timeout-minutes: 10  # Add timeout for the entire job
     
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3  # Updated to v3
     
     - name: Set up Python
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v4  # Updated to v4
       with:
         python-version: '3.10'
+        cache: 'pip'  # Enable pip caching
     
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install tweepy openai
+        pip install -r requirements.txt
     
     - name: Run tweet bot
       env:
@@ -29,4 +31,13 @@ jobs:
         TWITTER_ACCESS_TOKEN: ${{ secrets.TWITTER_ACCESS_TOKEN }}
         TWITTER_ACCESS_TOKEN_SECRET: ${{ secrets.TWITTER_ACCESS_TOKEN_SECRET }}
         OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-      run: python tweet_bot.py 
+      run: |
+        # Add retry logic for the entire script
+        for i in 1 2 3; do
+          if python tweet_bot.py; then
+            exit 0
+          fi
+          echo "Attempt $i failed. Waiting before retry..."
+          sleep $((i * 10))
+        done
+        exit 1 
