--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,3 @@
-tweepy>=4.14.0
-openai>=1.3.0
-python-dotenv>=1.0.0
-APScheduler>=3.10.1
-requests==2.31.0 
+tweepy==4.14.0
+openai==1.3.0
+tenacity==8.2.0 
