Updated News Sources

--- a/.github/workflows/tweet.yml
+++ b/.github/workflows/tweet.yml
@@ -1,37 +1,26 @@
-name: Tweet Bot
+name: Automated Cybersecurity Tweets
 
 on:
   schedule:
-    - cron: '0 */5 * * *'  # Run every 5 hours
+    - cron: '0 */4 * * *'  # Run every 4 hours
   workflow_dispatch:  # Allow manual trigger
-
-# Add concurrency control
-concurrency:
-  group: tweet-bot
-  cancel-in-progress: true
 
 jobs:
   tweet:
     runs-on: ubuntu-latest
-    timeout-minutes: 15  # Increased timeout to account for rate limit waits
     
     steps:
-    - uses: actions/checkout@v3  # Updated to v3
+    - uses: actions/checkout@v2
     
     - name: Set up Python
-      uses: actions/setup-python@v4  # Updated to v4
+      uses: actions/setup-python@v2
       with:
         python-version: '3.10'
-        cache: 'pip'  # Enable pip caching
     
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
-    
-    - name: Add random delay
-      run: |
-        sleep $(( RANDOM % 300 ))  # Random delay up to 5 minutes
+        pip install tweepy openai
     
     - name: Run tweet bot
       env:
